frontend/test/should_pass/ret_002.grg
using basic_model_002;

rule r : (A, AB, B, N) {
	x : A;
	y : AB;
	z : C;
	n : N;

	replace {
		x; y; n; z;
		return (x, y, y, n);
	}
}

