frontend/test/should_fail/exec_011.grg
using deep_model_001;

rule r(y : Acc) : (B) {
  hom(a,b);
  a : A;
  b : B;
  modify{
    exec((b)=r(a));
    return (b);
  }
}
